apps/secrets/bitwarden-cli/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden-cli
  namespace: secrets
  labels:
    app.kubernetes.io/instance: bitwarden-cli
    app.kubernetes.io/name: bitwarden-cli
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bitwarden-cli
      app.kubernetes.io/instance: bitwarden-cli
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bitwarden-cli
        app.kubernetes.io/instance: bitwarden-cli
    spec:
      containers:
        - name: bitwarden-cli
          image: registry.gitlab.com/lucadev/docker-bw:2023.12.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8087
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - curl
                - --data
                - ""
                - --fail
                - http://127.0.0.1:8087/sync
            initialDelaySeconds: 20
            failureThreshold: 3
            timeoutSeconds: 10
            periodSeconds: 120
          readinessProbe:
            exec:
              command:
                - /opt/healthcheck.sh
            initialDelaySeconds: 20
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8087
            initialDelaySeconds: 15
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          resources:
            requests:
              memory: 150Mi
              cpu: 50m
            limits:
              memory: 500Mi
              cpu: 1000m
          persistence:
            data:
              enabled: true
              name: bitwarden-cache
              mountPath: /home/bitwarden/.config/Bitwarden CLI/
              type: pvc
              accessMode: ReadWriteOnce
              size: 500m
