apps/secrets/bitwarden-cli/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-cli
  namespace: secrets
  labels:
    app.kubernetes.io/instance: bitwarden-cli
    app.kubernetes.io/name: bitwarden-cli
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: bitwarden-cli
    app.kubernetes.io/instance: bitwarden-cli
